--- a/ckanext/cioos_theme/templates/snippets/organization.html
+++ b/ckanext/cioos_theme/templates/snippets/organization.html
@@ -39,9 +39,9 @@ Example:
       </h1>
       {% endblock %}
       {% block description %}
-      {% if organization.description %}
+      {% if h.get_translated(organization, 'description') %}
         <p>
-          {{ h.markdown_extract(organization.description, 180) }}
+          {{ h.markdown_extract(h.get_translated(organization, 'description'), 180) }}
           {% link_for _('read more'), controller='organization', action='about', id=organization.name %}
         </p>
       {% else %}
