--- a/ckanext/cioos_theme/templates/group/read.html
+++ b/ckanext/cioos_theme/templates/group/read.html
@@ -1,4 +1,5 @@
 {% extends "group/read_base.html" %}
+{% set lang = h.lang() %}
 
 {% block primary_content_inner %}
   {% block groups_search_form %}
@@ -11,8 +12,8 @@
     %}
     {% set sorting = [
       (_('Relevance'), 'score desc, metadata_modified desc'),
-      (_('Name Ascending'), 'title_string asc'),
-      (_('Name Descending'), 'title_string desc'),
+      (_('Name Ascending'), 'title_' + lang + ' asc'),
+      (_('Name Descending'), 'title_' + lang + ' desc'),
       (_('Last Modified'), 'metadata_modified desc'),
       (_('Popular'), 'views_recent desc') if g.tracking_enabled else (false, false) ]
     %}
