--- a/ckanext/cioos_theme/templates/package/search.html
+++ b/ckanext/cioos_theme/templates/package/search.html
@@ -1,5 +1,6 @@
 {% extends "page.html" %}
 {% import 'macros/form.html' as form %}
+{% set lang = h.lang() %}
 
 {% block subtitle %}{{ _("Datasets") }}{% endblock %}
 
@@ -27,8 +28,8 @@
         %}
         {% set sorting = [
           (_('Relevance'), 'score desc, metadata_modified desc'),
-          (_('Name Ascending'), 'title_string asc'),
-          (_('Name Descending'), 'title_string desc'),
+          (_('Name Ascending'), 'title_' + lang + ' asc'),
+          (_('Name Descending'), 'title_' + lang + ' desc'),
           (_('Last Modified'), 'metadata_modified desc'),
           (_('Popular'), 'views_recent desc') if g.tracking_enabled else (false, false) ]
         %}
