--- a/ckanext/cioos_theme/templates/scheming/organization/about.html
+++ b/ckanext/cioos_theme/templates/scheming/organization/about.html
@@ -4,7 +4,11 @@
 <dl>
 {% for f in c.scheming_fields %}
 <dt>{{ h.scheming_language_text(f.label) }}:</dt>
-<dd>{{ h.scheming_language_text(c.group_dict[f.field_name]) or ("&nbsp;"|safe) }}</dd>
+  {% if f.field_name == 'name' %}
+    <dd>{{ h.render_markdown(h.url_for(controller='organization', action='read', id=c.group_dict[f.field_name], qualified=True)) }}</dd>
+  {% else %}
+    <dd>{{ h.render_markdown(h.scheming_language_text(c.group_dict[f.field_name]) or ("&nbsp;"|safe)) }}</dd>
+  {% endif %}
 {% endfor %}
 </dl>
 {% endblock %}
