fix spelling in comments

--- a/ckanext/cioos_theme/templates/admin/config.html
+++ b/ckanext/cioos_theme/templates/admin/config.html
@@ -49,7 +49,7 @@
         {% set home_url = h.url_for(controller='home', action='index') %}
         {% set docs_url = "http://docs.ckan.org/en/{0}/theming".format(g.ckan_doc_version) %}
         {% trans %}
-          <P>Bilingual Text fields, indicated by <em>(BL)</em> in the field desciption, accept values in languge dictinary format only.
+          <P>Bilingual Text fields, indicated by <em>(BL)</em> in the field description, accept values in language dictionary format only.
           </br> For example: {'fr':'Mon Titre', 'en':'My Title'}</p>
           <p><strong>Site Title:</strong> <em>(BL)</em> This is the title of this CKAN instance
             It appears in various places throughout CKAN.</p>
