--- a/ckanext/cioos_theme/templates/admin/config.html
+++ b/ckanext/cioos_theme/templates/admin/config.html
@@ -29,6 +29,8 @@
 
       {{ form.select('ckan.homepage_style', id='field-homepage-style', label=_('Homepage'), options=homepages, selected=data['ckan.homepage_style'], error=error) }}
 
+      {{ form.input('ckan.site_home_url', id='field-ckan-site-home-url', label=_('Site Landing Page'), value=data['ckan.site_home_url'], error=error) }}
+
       {% endblock %}
       <div class="form-actions">
         <a href="{% url_for 'admin.reset_config' %}" class="btn btn-danger pull-left" data-module="confirm-action" data-module-content="{{ _('Are you sure you want to reset the config?') }}">{{ _('Reset') }}</a>
