--- a/ckanext/cioos_theme/templates/footer.html
+++ b/ckanext/cioos_theme/templates/footer.html
@@ -4,7 +4,7 @@
       <a href="mailto:info@cioos.ca" title="{{ _('CONTACT US') }}">{{ _('CONTACT US') }}</a>
     </div>
     <div class="col-md-6 col1 rightalign">
-      <a href="{{ h.url_for('home.index') }}../" title="{{ _('BACK TO CIOOS MAIN WEBSITE') }}">{{ _('BACK TO CIOOS MAIN WEBSITE') }}</a>
+      <a href="{{ g.site_home_url or h.url_for('home.index') }}" title="{{ _('BACK TO CIOOS MAIN WEBSITE') }}">{{ _('BACK TO CIOOS MAIN WEBSITE') }}</a>
     </div>
   </div>
 </div>
