--- a/ckanext/cioos_theme/templates/package/search.html
+++ b/ckanext/cioos_theme/templates/package/search.html
@@ -73,7 +73,7 @@
 {% block secondary_content %}
 <div class="filters">
   <div>
-    {% snippet "spatial/snippets/spatial_query.html" , default_extent="[[48.0, -130.0], [60.0, -110.0]]" %}
+    {% snippet "spatial/snippets/spatial_query.html" , default_extent= h.spatial_default_extent() %}
     {% for facet in c.facet_titles %}
       {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet) }}
     {% endfor %}
