--- a/ckanext/cioos_theme/templates/footer.html
+++ b/ckanext/cioos_theme/templates/footer.html
@@ -69,3 +69,8 @@
   </div>
 </header>
 {% endblock %}
+{% block footer_debug %}
+  {% if g.debug %}
+    {% include 'snippets/debug.html' %}
+  {% endif %}
+{% endblock %}
