--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -35,7 +35,7 @@
         <ul id="menu-mobile-menu" class="menu">
           <li><a href="{{ g.site_home_url }}">{{ _('HOME') }}</a></li>
           {% block header_mobilesite_navigation_tabs %} {{ h.build_nav_main( ('search', _('Datasets')), ('organizations_index', _('Organizations')),
-          ('group_index', _('Groups')), ('home.about', _('About')), ('home.index', _('Catalogue Home')) ) }} {% endblock %}
+          ('group_index', _('Groups')), ('home.about', _('About')), ('home.index', _('Data Catalogue')) ) }} {% endblock %}
           <ul class="shareicons">
             <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
             <li><a href="http://facebook.com/cioos.siooc/" tabindex="0" aria-label="Facebook"><i class="fa fa-facebook-square"></i></a></li>
@@ -89,8 +89,11 @@
       <ul>
         {% block header_site_navigation_tabs %}
         <li><a href="{{ g.site_home_url }}">{{ _('HOME') }}</a></li>
-        {{ h.build_nav_main( ('search', _('Datasets')), ('organizations_index', _('Organizations')),
-        ('group_index', _('Groups')), ('home.about', _('About')), ('home.index', _('Catalogue Home')) ) }} {% endblock %}
+        {{ h.build_nav_main( ('search', _('Datasets')), ('organizations_index', _('Organizations')) ) }}
+        <li><a href="{{ g.site_home_url }}about/ ">{{ _('CIOOS APPLIED') }}</a></li>
+        <li><a href="{{ g.site_home_url }}data-applications/ ">{{ _('CIOOS APPLIED') }}</a></li>
+        <li><a href="{{ g.site_home_url }}data-tools">{{ _('DATA TOOLS') }}</a></li>
+        {{ h.build_nav_main( ('home.index', _('Data Catalogue')) ) }} {% endblock %}
       </ul>
     </nav>
     {% endblock %}
