--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -68,6 +68,11 @@
             <a href="{% url_for h.current_url(), locale='en' %}" tabindex="0" aria-label="French/English">EN</a>
           {%- endif -%}
         </li>
+        <li>
+          <a href="https://cioos.ca">
+            <img class="mega-menu-logo" width="425" height="60" src="/base/images/logos/Artboard-2-425x60.png">
+          </a>
+        </li>
         </ul>
     </nav>
   </div>
