--- a/ckanext/cioos_theme/templates/admin/config.html
+++ b/ckanext/cioos_theme/templates/admin/config.html
@@ -31,6 +31,9 @@
 
       {{ form.input('ckan.site_home_url', id='field-ckan-site-home-url', label=_('Site Landing Page'), value=data['ckan.site_home_url'], error=error) }}
 
+      {{ form.input('ckan.exclude_eov_category', id='field-ckan-exclude-eov-categoryl', label=_('Exclude eov\'s by category'), value=data['ckan.exclude_eov_category'], error=error) }}
+
+      {{ form.input('ckan.exclude_eov', id='field-ckan-exclude-eov', label=_('Exlcude individul eov\'s'), value=data['ckan.exclude_eov'], error=error) }}
       {% endblock %}
       <div class="form-actions">
         <a href="{% url_for 'admin.reset_config' %}" class="btn btn-danger pull-left" data-module="confirm-action" data-module-content="{{ _('Are you sure you want to reset the config?') }}">{{ _('Reset') }}</a>
