--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -70,7 +70,7 @@
         </li>
         <li>
           <a href="https://cioos.ca">
-            <img class="mega-menu-logo" width="425" height="60" src="/base/images/logos/Artboard-2-425x60.png">
+            <img class="mega-menu-logo" width="425" height="60" src="{{ h.url_for_static_or_external('/base/images/logos/Artboard-2-425x60.png') }}">
           </a>
         </li>
         </ul>
