update ra logo url

--- a/ckanext/cioos_theme/templates/header_wp.html
+++ b/ckanext/cioos_theme/templates/header_wp.html
@@ -286,7 +286,7 @@
 <div id="header">
   <div id="header-core">
     <div id="logo">
-      <a rel="home" href="{{ g.site_home_url }}"><img src="{{ g.site_home_url }}wp-content/uploads/2019/11/cioos-pacific_logo_RA_EN.png" alt="Logo"></a> </div>
+      <a rel="home" href="{{ g.site_home_url }}"><img src="{{ logo_url }}{{ logo_url }}" alt="Logo"></a> </div>
     <div id="header-links" class="main-navigation">
       <div id="header-links-inner" class="header-links">
         <ul id="menu-main-menu-en" class="menu">
